<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WeatherFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        android:background="#E0E0FF">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="59dp"
                android:layout_height="match_parent"
                android:text="@string/mon"
                android:textAlignment="center"
                android:textSize="21sp" />

            <ImageView
                android:id="@+id/weatherIcon1"
                android:layout_width="72dp"
                android:layout_height="match_parent"
                android:contentDescription="@drawable/wi_cloud"
                android:src="@drawable/wi_day_cloudy" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Partly Cloudy\n24C - 31C"
                android:textSize="21sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="59dp"
                android:layout_height="match_parent"
                android:text="@string/tue"
                android:textAlignment="center"
                android:textSize="21sp" />

            <ImageView
                android:id="@+id/weatherIcon3"
                android:layout_width="72dp"
                android:layout_height="match_parent"
                android:contentDescription="@drawable/wi_showers"
                android:src="@drawable/wi_showers" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Showers\n24C - 30C"
                android:textSize="21sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="59dp"
                android:layout_height="match_parent"
                android:text="@string/wed"
                android:textAlignment="center"
                android:textSize="21sp" />

            <ImageView
                android:id="@+id/weatherIcon4"
                android:layout_width="72dp"
                android:layout_height="match_parent"
                android:contentDescription="@drawable/wi_rain"
                android:src="@drawable/wi_rain" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Rain\n22C - 23C"
                android:textSize="21sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="59dp"
                android:layout_height="match_parent"
                android:text="@string/thu"
                android:textAlignment="center"
                android:textSize="21sp" />

            <ImageView
                android:id="@+id/weatherIcon5"
                android:layout_width="72dp"
                android:layout_height="match_parent"
                android:contentDescription="@drawable/wi_cloud"
                android:src="@drawable/wi_rain_mix" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Scattered Showers\n22C - 27C"
                android:textSize="21sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="59dp"
                android:layout_height="match_parent"
                android:text="@string/fri"
                android:textAlignment="center"
                android:textSize="21sp" />

            <ImageView
                android:id="@+id/weatherIcon6"
                android:layout_width="72dp"
                android:layout_height="match_parent"
                android:contentDescription="@drawable/wi_cloudy"
                android:src="@drawable/wi_cloudy" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Mostly Cloudy\n22C - 30C"
                android:textSize="21sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="59dp"
                android:layout_height="match_parent"
                android:text="@string/sat"
                android:textAlignment="center"
                android:textSize="21sp" />

            <ImageView
                android:id="@+id/weatherIcon7"
                android:layout_width="72dp"
                android:layout_height="match_parent"
                android:contentDescription="@drawable/wi_cloud"
                android:src="@drawable/wi_cloud" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Partly Cloudy\n24C - 31C"
                android:textSize="21sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="59dp"
                android:layout_height="match_parent"
                android:text="@string/sun"
                android:textAlignment="center"
                android:textSize="21sp" />

            <ImageView
                android:id="@+id/weatherIcon8"
                android:layout_width="72dp"
                android:layout_height="match_parent"
                android:contentDescription="@drawable/wi_cloud"
                android:src="@drawable/wi_thunderstorm" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Thunderstorms\n25C - 28C"
                android:textSize="21sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="59dp"
                android:layout_height="match_parent"
                android:text="@string/mon"
                android:textAlignment="center"
                android:textSize="21sp" />

            <ImageView
                android:id="@+id/weatherIcon9"
                android:layout_width="72dp"
                android:layout_height="match_parent"
                android:contentDescription="@drawable/wi_day_thunderstorm"
                android:src="@drawable/wi_day_thunderstorm" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Scattered Thunderstorms\n24C - 27C"
                android:textSize="21sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="59dp"
                android:layout_height="match_parent"
                android:text="@string/tue"
                android:textAlignment="center"
                android:textSize="21sp" />

            <ImageView
                android:id="@+id/weatherIcon10"
                android:layout_width="72dp"
                android:layout_height="match_parent"
                android:contentDescription="@drawable/wi_showers"
                android:src="@drawable/wi_showers" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Showers\n24C - 26C"
                android:textSize="21sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="59dp"
                android:layout_height="match_parent"
                android:text="@string/wed"
                android:textAlignment="center"
                android:textSize="21sp" />

            <ImageView
                android:id="@+id/weatherIcon11"
                android:layout_width="72dp"
                android:layout_height="match_parent"
                android:contentDescription="@drawable/wi_day_thunderstorm"
                android:src="@drawable/wi_day_thunderstorm" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Scattered Thunderstorms\n23C - 27C"
                android:textSize="21sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="59dp"
                android:layout_height="match_parent"
                android:text="@string/thu"
                android:textAlignment="center"
                android:textSize="21sp" />

            <ImageView
                android:id="@+id/weatherIcon12"
                android:layout_width="72dp"
                android:layout_height="match_parent"
                android:contentDescription="@drawable/wi_cloud"
                android:src="@drawable/wi_cloud" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Mostly Cloudy\n22C - 25C"
                android:textSize="21sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="59dp"
                android:layout_height="match_parent"
                android:text="@string/fri"
                android:textAlignment="center"
                android:textSize="21sp" />

            <ImageView
                android:id="@+id/weatherIcon13"
                android:layout_width="72dp"
                android:layout_height="match_parent"
                android:contentDescription="@drawable/wi_cloudy"
                android:src="@drawable/wi_cloudy" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Partly Cloudy\n23C - 26C"
                android:textSize="21sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>